@@ -234,7 +234,7 @@ public class TrueTypeFont{
 				if( i < 256 ) { // standard characters
 					charArray[i] = newIntObject;
 				} else { // custom characters
-					customChars.put( new Character( ch ), newIntObject );
+					customChars.put( Character.valueOf( ch ), newIntObject );
 				}
 
 				fontImage = null;
@@ -308,7 +308,7 @@ public class TrueTypeFont{
 			if (currentChar < 256) {
 				intObject = charArray[currentChar];
 			} else {
-				intObject = (IntObject)customChars.get( new Character( (char) currentChar ) );
+				intObject = (IntObject)customChars.get( Character.valueOf( (char) currentChar ) );
 			}
 
 			if( intObject != null )
@@ -380,7 +380,7 @@ public class TrueTypeFont{
 			if (charCurrent < 256) {
 				intObject = charArray[charCurrent];
 			} else {
-				intObject = (IntObject)customChars.get( new Character( (char) charCurrent ) );
+				intObject = (IntObject)customChars.get( Character.valueOf( (char) charCurrent ) );
 			}
 
 			if( intObject != null ) {
